test/grammar/types/var_type_annotation/type_fail_7/stderr.golden
error[E2G22]: TypeError
 --> ${CWD}/main.k:1:1
  |
1 | name: "aa\"ab|" | "abc" = "aa\"ab"
  | ^ expected str(aa"ab|) | str(abc), got str(aa"ab)
  |